--- a/index.html
+++ b/index.html
@@ -14,18 +14,15 @@
 </head>
 
 <body class="page-body">
+
   <header class="header">
     <nav class="page-menu">
       <ul class="header-menu">
-        <li class="header-item"><a href="#">информация</a></li>
-        <li class="header-item"><a href="#">фото и видео</a></li>
-      </ul>
-    </nav>
-    <a class="logo">
-      <img src="img/logo.png" alt="Логотип сайта Sedona" style="height: 70px; width: 138px;">
-    </a>
-    <nav class="page-menu">
-      <ul class="header-menu">
+        <li class="header-item"><a href="#">Информация</a></li>
+        <li class="header-item"><a href="#">Фото и видео</a></li>
+        <a class="logo">
+          <img src="img/logo.png" alt="Логотип сайта Sedona" style="height: 70px; width: 138px;">
+        </a>
         <li class="header-item"><a href="#">Карта штата</a></li>
         <li class="header-item"><a href="/catalog.html">Гостиницы</a></li>
       </ul>
@@ -34,80 +31,82 @@
 
   <main>
     <h1>Sedona</h1>
-    <section class="welcome-content" style=background-image:url(img/bg.png)> <br>
-      <p class="welcome"><img src="img/welcome.png" alt="welcome"></p>
-      <p class="gorgeous"><img src="img/gorgeous.png" alt="gorgeous"></p>
-      <p class="sedona"><img src="img/sedona.png" alt="sedona"></p>
-      <p class="shape"><img src="img/shape.png" alt="shape"></p>
-    </section>
+    <section class="main-content">
+      <div class="welcome-content">
+        <p class="welcome"><img src="img/welcome.png" alt="welcome"></p>
+        <p class="gorgeous"><img src="img/gorgeous.png" alt="gorgeous"></p>
+        <p class="sedona"><img src="img/sedona.png" alt="sedona"></p>
+        <p class="shape"><img src="img/shape.png" alt="shape"></p>
+      </div>
 
-    <section class="content">
-      <p class="content-title">Седона — небольшой городок в Аризоне,<br>заслуживающий большего!</p>
-      <p class="content-text">Рассмотрим 5 причин, по которым Седона круче, чем гранд каньон!</p>
-    </section>
-    <section class="services">
-      <div class="sity">
-        <div class="services-text-first">
-          <h2>Настоящий <br>городок</h2>
-          <p>— №1 —</p>
-          <p>Седона - не аттракцион для туристов, там <br>течёт своя жизнь</p>
-        </div>
-        <p class="img-sity"><img src="img/sity.png" alt="sity" style="width:800px; height:256px"></p>
+      <div class="content">
+        <p class="content-title">Седона — небольшой городок в Аризоне,<br>заслуживающий большего!</p>
+        <p class="content-text">Рассмотрим 5 причин, по которым Седона круче, чем гранд каньон!</p>
       </div>
-    </section>
-    <section class="services-items">
-      <article class="services-item">
-        <div class="servises-servises">
-          <img src="img/home.png" alt="home" style="width:75px; height:72px">
-          <h2>Жилье</h2>
-          <p>Рекомендуем пожить в настоящем <br> мотеле, всё как в кино!</p>
-        </div>
-      </article>
-      <article class="services-item">
-        <div class="services-img"><img src="img/food.png" alt="food" style="width:75px; height:72px"></div>
-        <div class="services-text">
-          <h2>Еда</h2>
-          <p>Всегда заказывайте фирменный бургер,<br> вы не разочаруетесь!</p>
-        </div>
-      </article>
-      <article class="services-item">
-        <div class="services-img"><img src="img/souvenir.png" alt="souvenir" style="width:75px; height:72px"></div>
-        <div class="services-text">
-          <h2>Сувениры</h2>
-          <p>Не только китайского, но и местного <br>производства!</p>
-        </div>
-      </article>
-    </section>
-    <section class="services">
-      <div class="bridge">
-        <p class="img-bridge"><img src="img/bridge.png" alt="bridge" style="width:800px; height:256px;"></p>
-        <div class="services-text-second">
-          <h2>Там есть Мост дьявола</h2>
-          <p>— №2 —</p>
-          <p>Да, по нему можно пройти! Если конечно <br>вы осмелитесь</p>
+      <div class="services">
+        <div class="sity">
+          <div class="services-text-first">
+            <h2>Настоящий <br>городок</h2>
+            <p>— №1 —</p>
+            <p>Седона - не аттракцион для туристов, там <br>течёт своя жизнь</p>
+          </div>
+          <p class="img-sity"><img src="img/sity.png" alt="sity" style="width:800px; height:256px"></p>
         </div>
       </div>
-    </section>
-    <section class="services-text-item">
-      <div class="text>">
-        <h2>небольшая <br> площадь</h2>
-        <p>— №3 —</p>
-        <p>Все достопримечательности <br> находятся очень близко</p>
+      <div class="services-items">
+        <article class="services-item">
+          <div class="servises-servises">
+            <img src="img/home.png" alt="home" style="width:75px; height:72px">
+            <h2>Жилье</h2>
+            <p>Рекомендуем пожить в настоящем <br> мотеле, всё как в кино!</p>
+          </div>
+        </article>
+        <article class="services-item">
+          <div class="services-img"><img src="img/food.png" alt="food" style="width:75px; height:72px"></div>
+          <div class="services-text">
+            <h2>Еда</h2>
+            <p>Всегда заказывайте фирменный бургер,<br> вы не разочаруетесь!</p>
+          </div>
+        </article>
+        <article class="services-item">
+          <div class="services-img"><img src="img/souvenir.png" alt="souvenir" style="width:75px; height:72px"></div>
+          <div class="services-text">
+            <h2>Сувениры</h2>
+            <p>Не только китайского, но и местного <br>производства!</p>
+          </div>
+        </article>
       </div>
-      <div class="text">
-        <h2>Красивая <br> дорога</h2>
-        <p>— №4 —</p>
-        <p>Ехать в седону из лас-вегаса совсем <br>не скучно!</p>
+      <div class="services">
+        <div class="bridge">
+          <p class="img-bridge"><img src="img/bridge.png" alt="bridge" style="width:800px; height:256px;"></p>
+          <div class="services-text-second">
+            <h2>Там есть Мост дьявола</h2>
+            <p>— №2 —</p>
+            <p>Да, по нему можно пройти! Если конечно <br>вы осмелитесь</p>
+          </div>
+        </div>
       </div>
-      <div class="text">
-        <h2>Мало <br> туристов</h2>
-        <p>— №5 —</p>
-        <p>Большинство едет в гранд каньон <br>и толпится там</p>
+      <div class="services-text-item">
+        <div class="text>">
+          <h2>Небольшая <br> площадь</h2>
+          <p>— №3 —</p>
+          <p>Все достопримечательности <br> находятся очень близко</p>
+        </div>
+        <div class="text">
+          <h2>Красивая <br> дорога</h2>
+          <p>— №4 —</p>
+          <p>Ехать в седону из лас-вегаса совсем <br>не скучно!</p>
+        </div>
+        <div class="text">
+          <h2>Мало <br> туристов</h2>
+          <p>— №5 —</p>
+          <p>Большинство едет в гранд каньон <br>и толпится там</p>
+        </div>
       </div>
-    </section>
-    <section class="content-item">
-      <h2>Заинтересовались?</h2>
-      <p>Укажите предполагаемые даты поездки,<br> и мы покажем вам лучшие предложения гостиниц в Седоне</p>
+      <div class="content-item">
+        <h2>Заинтересовались?</h2>
+        <p>Укажите предполагаемые даты поездки,<br> и мы покажем вам лучшие предложения гостиниц в Седоне</p>
+      </div>
     </section>
     <section class="search">
       <div class="search-hotel">
@@ -149,30 +148,25 @@
       </section>
     </section>
   </main>
+
   <footer class="footer-main">
     <nav class="footer-section">
       <div class="phone">
         <p>#visitsedona</p>
         <a class="phone-item" href="tel:+7(495)666-01-66">+7(495)666-01-66</a>
       </div>
-      <div class="footer-img">
-        <a href="https://twitter.com">
-          <img class="footer-img-item" src="img/twitter.png" alt="твиттер" style="width:17px; height:17px;">
-        </a>
-        <a href="https://facebook.com"><img class="footer-img-item" src="img/facebook.png" alt="фейсбук"
-            style="width:17px; height:17px;">
-        </a>
-        <a href="https://youtube.com"><img class="footer-img-item" src="img/youtube.png" alt="ютуб"
-            style="width:17px; height:17px;">
-        </a>
-      </div>
-      <article class="footer-from">
+      <ul class="footer-img">
+        <li class="footer-img-first"><a href="https://twitter.com"></a></li>
+        <li class="footer-img-second"><a href="https://facebook.com"></a></li>
+        <li class="footer-img-third"><a href="https://youtube.com"></a></li>
+      </ul>
+      <div class="footer-from">
         <p>Website by</p>
         <img src="img/htmlacademy.png" alt="" style="width:115px; height: 41px;">
-      </article>
+      </div>
     </nav>
-
   </footer>
+
 </body>
 
 </html>
