--- a/catalog.html
+++ b/catalog.html
@@ -21,7 +21,7 @@
         <li class="header-item"><a href="#">Информация</a></li>
         <li class="header-item"><a href="#">Фото и видео</a></li>
         <a class="logo" href="/index.html">
-          <img src="img/logo.png" alt="Логотип сайта Sedona" style="height: 60px; width: 138px;">
+          <img src="img/logo.png" alt="Логотип сайта Sedona">
         </a>
         <li class="header-item"><a href="#">Карта штата</a></li>
         <li class="header-item"><a href="#">Гостиницы</a></li>
@@ -32,7 +32,7 @@
   <main class="main-catalog">
     <h1>Catalog</h1>
     <section class="search-catalog">
-      <h2>Фильтр поиска жилья</h2>
+      <h2 class="visually-hidden">Фильтр поиска жилья</h2>
       <form class="search-form" action="https://echo.htmlacademy.ru" method="post">
         <fieldset>
           <legend>Инфраструктура:</legend>
@@ -91,9 +91,9 @@
     </section>
 
     <section class="catalog-hotel">
-      <h2 class="visually-hidden">Результат поиска гостиниц</h2>
+      <h1 class="visually-hidden">Результат поиска гостиниц</h1>
       <div class="search-result">
-        <h3 class="catalog-found">Найдено: 3</h3>
+        <h2 class="catalog-found">Найдено: 3</h2>
         <div class="catalog-sorting">
           <p class="catalog-sort">Сортировка:</p>
           <ul class="list-sorting-type">
@@ -102,9 +102,9 @@
             <li><a href="">По рейтингу</a></li>
           </ul>
         </div>
-        <ul class="list-sorting">
-          <li><a href="" class="sort-up"><img src="img/icon-up.png" alt="Стрелка вверх"></a></li>
-          <li><a href="" class="sort-down"><img src="img/icon-down.png" alt="Стрелка вниз"></a></li>
+        <ul class="list-sorting-arrows">
+          <li><a href="#" class="sort-up"><img class="sort-img" src="img/icon-up.png" alt="Стрелка вверх"></a></li>
+          <li><a href="#" class="sort-down"><img src="img/icon-down.png" alt="Стрелка вниз"></a></li>
         </ul>
       </div>
       <ul class="hotel-list">
@@ -114,7 +114,7 @@
             <img src="img/amara.png" alt="Фотография" width="135" height="90">
           </div>
           <div class="hotel-info">
-            <h3 class="hotel-name">Amara resort & spa</h3>
+            <h2 class="hotel-name">Amara resort & spa</h2>
             <div class="hotel-price">
               <p class="hotel-type">Гостиница</p>
               <p class="hotel-value">От 4000 р.</p>
@@ -134,7 +134,7 @@
             <img src="img/desert.png" alt="фотография" width="135" height="90">
           </div>
           <div class="hotel-info">
-            <h3 class="hotel-name">Desert quail inn</h3>
+            <h2 class="hotel-name">Desert quail inn</h2>
             <div class="hotel-price">
               <p class="hotel-type">Мотель</p>
               <p class="hotel-value">От 3000 р.</p>
@@ -154,7 +154,7 @@
             <img src="img/villas.png" alt="Фотография" width="135" height="90">
           </div>
           <div class="hotel-info">
-            <h3 class="hotel-name">Villas at poco diablo</h3>
+            <h2 class="hotel-name">Villas at poco diablo</h2>
             <div class="hotel-price">
               <p class="hotel-type">Апартаменты</p>
               <p class="hotel-value">От 2000 р.</p>
