--- a/catalog.html
+++ b/catalog.html
@@ -15,19 +15,20 @@
 </head>
 
 <body class="page-body">
-  <header class="header">
+  <header class="page-header">
     <nav class="page-menu">
-      <ul class="header-menu">
+      <a class="logo">
+        <img src="img/logo.png" alt="Логотип сайта Sedona">
+      </a>
+      <ul class="site-navigation">
         <li class="header-item"><a href="#">Информация</a></li>
         <li class="header-item"><a href="#">Фото и видео</a></li>
-        <a class="logo" href="/index.html">
-          <img src="img/logo.png" alt="Логотип сайта Sedona">
-        </a>
         <li class="header-item"><a href="#">Карта штата</a></li>
-        <li class="header-item"><a href="#">Гостиницы</a></li>
+        <li class="header-item"><a href="/catalog.html">Гостиницы</a></li>
       </ul>
     </nav>
   </header>
+
 
   <main class="main-catalog">
     <h1>Catalog</h1>
@@ -140,8 +141,8 @@
               <p class="hotel-value">От 3000 р.</p>
             </div>
             <p class="hotel-button">
-              <a class="hotel-first">Подробнее</a>
-              <a class="hotel-second">Забронировать</a>
+              <a class="hotel-first" href="#">Подробнее</a>
+              <a class="hotel-second" href="#">Забронировать</a>
             </p>
           </div>
           <div class="hotel-rating">
