--- a/catalog.html
+++ b/catalog.html
@@ -108,11 +108,11 @@
           <li><a href="#" class="sort-down"><img src="img/icon-down.png" alt="Стрелка вниз"></a></li>
         </ul>
       </div>
+      <h2 class="visually-hidden">Выбор гостиницы</h2>
       <ul class="hotel-list">
-        <h2 class="visually-hidden">Выбор гостиницы</h2>
         <li class="hotel-item">
           <div class="hotel-photo">
-            <img src="img/amara.png" alt="Фотография" width="135" height="90">
+            <img src="img/amara.png" alt="Фотография гостиницы" width="135" height="90">
           </div>
           <div class="hotel-info">
             <h2 class="hotel-name">Amara resort & spa</h2>
@@ -121,8 +121,8 @@
               <p class="hotel-value">От 4000 р.</p>
             </div>
             <p class="hotel-button">
-              <a class="hotel-first" href="#">Подробнее</a>
-              <a class="hotel-second" href="#">Забронировать</a>
+              <button type="submit" class="hotel-first">Подробнее</button>
+              <button type="submit" class="hotel-second">Забронировать</a>
             </p>
           </div>
           <div class="hotel-rating">
@@ -132,7 +132,7 @@
         </li>
         <li class="hotel-item">
           <div class="hotel-photo">
-            <img src="img/desert.png" alt="фотография" width="135" height="90">
+            <img src="img/desert.png" alt="фотография гостиницы" width="135" height="90">
           </div>
           <div class="hotel-info">
             <h2 class="hotel-name">Desert quail inn</h2>
@@ -152,7 +152,7 @@
         </li>
         <li class="hotel-item">
           <div class="hotel-photo">
-            <img src="img/villas.png" alt="Фотография" width="135" height="90">
+            <img src="img/villas.png" alt="Фотография гостиницы" width="135" height="90">
           </div>
           <div class="hotel-info">
             <h2 class="hotel-name">Villas at poco diablo</h2>
