--- a/index.html
+++ b/index.html
@@ -37,7 +37,6 @@
         <p class="sedona"><img src="img/sedona.png" alt="sedona"></p>
         <p class="shape"><img src="img/shape.png" alt="shape"></p>
       </div>
-
       <div class="content">
         <p class="content-title">Седона — небольшой городок в Аризоне,<br>заслуживающий большего!</p>
         <p class="content-text">Рассмотрим 5 причин, по которым Седона круче, чем гранд каньон!</p>
@@ -49,19 +48,19 @@
             <p>— №1 —</p>
             <p>Седона - не аттракцион для туристов, там <br>течёт своя жизнь</p>
           </div>
-          <p class="img-sity"><img src="img/sity.png" alt="sity" style="width:800px; height:256px"></p>
+          <p class="img-sity"><img src="img/sity.jpg" alt="sity"></p>
         </div>
       </div>
       <ul class="services-items">
         <li class="services-item">
           <div class="servises-servises">
-            <img src="img/home.png" alt="home" style="width:75px; height:72px">
+            <img src="img/home.svg" alt="home" style="width:75px; height:72px">
             <h2>Жилье</h2>
             <p>Рекомендуем пожить в настоящем <br> мотеле, всё как в кино!</p>
           </div>
         </li>
         <li class="services-item">
-          <div class="services-img"><img src="img/food.png" alt="food" style="width:75px; height:72px"></div>
+          <div class="services-img"><img src="img/food.svg" alt="food" style="width:75px; height:72px"></div>
           <div class="services-text">
             <h2>Еда</h2>
             <p>Всегда заказывайте фирменный бургер,<br> вы не разочаруетесь!</p>
@@ -77,7 +76,7 @@
       </ul>
       <div class="services">
         <div class="bridge">
-          <p class="img-bridge"><img src="img/bridge.png" alt="bridge" style="width:800px; height:256px;"></p>
+          <p class="img-bridge"><img src="img/bridge.jpg" alt="bridge"></p>
           <div class="services-text-second">
             <h2>Там есть Мост дьявола</h2>
             <p>— №2 —</p>
@@ -119,7 +118,6 @@
 
     <section class="form-modal" id="form-modal-window">
       <div class="modal-content">
-        <a href="#close-window" class="close-window">X</a>
         <form class="modal-form" action="https://echo.htmlacademy.ru" method="post">
           <p class="modal-in">
             <label for="date-in">Дата заезда:</label>
@@ -135,13 +133,13 @@
             <label for="adults">Взрослые:</label>
             <p>
               <button type="button">-</button>
-              <input id=" adults" type="number" name="adult" value="2">
+              <input id="adults" type="number" name="adult" value="2">
               <button type="button" name="plus">+</button>
             </p>
-            <label for="сhild">Дети:</label>
+            <label for="сhildren">Дети:</label>
             <p>
               <button type="button" name="minus">-</button>
-              <input id="child" type="number" name="children" value="0">
+              <input id="children" type="number" name="children" value="0">
               <button type="button" name="plus">+</button>
             </p>
           </div>
