--- a/catalog.html
+++ b/catalog.html
@@ -29,7 +29,6 @@
     </nav>
   </header>
 
-
   <main class="main-catalog">
     <h1>Catalog</h1>
     <section class="search-catalog">
@@ -105,14 +104,14 @@
         </div>
         <ul class="list-sorting-arrows">
           <li><a href="#" class="sort-up"><img class="sort-img" src="img/icon-up.png" alt="Стрелка вверх"></a></li>
-          <li><a href="#" class="sort-down"><img src="img/icon-down.png" alt="Стрелка вниз"></a></li>
+          <li><a href="#" class="sort-down"><img class="sort-img" src="img/icon-down.png" alt="Стрелка вниз"></a></li>
         </ul>
       </div>
       <h2 class="visually-hidden">Выбор гостиницы</h2>
       <ul class="hotel-list">
         <li class="hotel-item">
           <div class="hotel-photo">
-            <img src="img/amara.png" alt="Фотография гостиницы" width="135" height="90">
+            <img class="hotel-photo-item" src="img/amara.png" alt="Фотография гостиницы">
           </div>
           <div class="hotel-info">
             <h2 class="hotel-name">Amara resort & spa</h2>
@@ -126,13 +125,18 @@
             </p>
           </div>
           <div class="hotel-rating">
-            <span class="stars">&#9733;&#9733;&#9733;&#9733;</span>
+            <span class="stars-amara">
+              <img class="star-item" src="/img/star.svg" alt="stars">
+              <img class="star-item" src="/img/star.svg" alt="stars">
+              <img class="star-item" src="/img/star.svg" alt="stars">
+              <img class="star-item" src="/img/star.svg" alt="stars">
+            </span>
             <p class="rating-value">Рейтинг: 8,5</p>
           </div>
         </li>
         <li class="hotel-item">
           <div class="hotel-photo">
-            <img src="img/desert.png" alt="фотография гостиницы" width="135" height="90">
+            <img class="hotel-photo-item" src="img/desert.png" alt="фотография гостиницы">
           </div>
           <div class="hotel-info">
             <h2 class="hotel-name">Desert quail inn</h2>
@@ -146,13 +150,17 @@
             </p>
           </div>
           <div class="hotel-rating">
-            <span class="stars">&#9733;&#9733;&#9733;</span>
+            <span class="stars">
+              <img class="star-item" src="/img/star.svg" alt="stars">
+              <img class="star-item" src="/img/star.svg" alt="stars">
+              <img class="star-item" src="/img/star.svg" alt="stars">
+            </span>
             <p class="rating-value">Рейтинг: 8,9</p>
           </div>
         </li>
         <li class="hotel-item">
           <div class="hotel-photo">
-            <img src="img/villas.png" alt="Фотография гостиницы" width="135" height="90">
+            <img class="hotel-photo-item" src="img/villas.png" alt="Фотография гостиницы">
           </div>
           <div class="hotel-info">
             <h2 class="hotel-name">Villas at poco diablo</h2>
@@ -166,7 +174,10 @@
             </p>
           </div>
           <div class="hotel-rating">
-            <span class="stars">&#9733;&#9733;</span>
+            <span class="stars">
+              <img class="star-item" src="/img/star.svg" alt="stars">
+              <img class="star-item" src="/img/star.svg" alt="stars">
+            </span>
             <p class="rating-value">Рейтинг: 9,2</p>
           </div>
         </li>
