--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
           Седоне</p>
         <a class="search-modal" href="#form-modal-window">Поиск гостиницы в седоне</a>
       </div>
-      <iframe
+      <iframe class="maps"
         src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d209540.72208672512!2d-111.93530069597175!3d34.85437335636785!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x872da132f942b00d%3A0x5548c523fa6c8efd!2z0KHQtdC00L7QvdCwLCDQkNGA0LjQt9C-0L3QsCA4NjMzNiwg0KHQqNCQ!5e0!3m2!1sru!2sru!4v1616126297372!5m2!1sru!2sru"
         width="1200" height="594" style="border:0;" allowfullscreen="" loading="lazy">
       </iframe>
@@ -121,23 +121,23 @@
         <form class="modal-form" action="https://echo.htmlacademy.ru" method="post">
           <p class="modal-in">
             <label for="date-in">Дата заезда:</label>
-            <input id="date-in" type="date" name="data" value="2017-04-24">
+            <input id="date-in" type="date" name="date" value="2017-24-04">
           </p>
           <br>
           <p class="modal-out">
             <label for="date-out">Дата выезда:</label>
-            <input id="date-out" type="date" value="2017-07-04">
+            <input id="date-out" type="date" name="date" value="2017-07-04">
           </p>
           <br>
           <div class="modal-client">
             <label for="adults">Взрослые:</label>
-            <p>
+            <p class="modal-search">
               <button type="button">-</button>
               <input id="adults" type="number" name="adult" value="2">
               <button type="button" name="plus">+</button>
             </p>
             <label for="сhildren">Дети:</label>
-            <p>
+            <p class="modal-search">
               <button type="button" name="minus">-</button>
               <input id="children" type="number" name="children" value="0">
               <button type="button" name="plus">+</button>
